--- a/Copy_of_Практическая_работа_№4_Исследование_Python_пакета_—_от_теоретических_основ_до_публикации_в_GitHub.ipynb
+++ b/Copy_of_Практическая_работа_№4_Исследование_Python_пакета_—_от_теоретических_основ_до_публикации_в_GitHub.ipynb
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "dc7ad5d4",
       "metadata": {
         "id": "dc7ad5d4"
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "38c109a0",
       "metadata": {
         "id": "38c109a0",
@@ -911,7 +911,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<font color='green'>Ваш ответ (кликните два раза на эту ячейку, удалите содержимое и впишите ответ)</font>"
+        "Оба варината сработали. (from ..root import square_root) поднимается на выше и ищет файл root. (from calculator.advanced.root import square_root )прописывает полный путь до него.  "
       ],
       "metadata": {
         "id": "f5Q7sNgSXR9A"
